c/examples/gcc/testsuite/c-c++-common/tm/inline-asm.c
/* { dg-do compile } */
/* { dg-options "-fgnu-tm -O1 -fno-ipa-modref -fno-ipa-pure-const" } */

static inline void
inline_death ()
{
  __asm__ ("");			/* { dg-error "'asm' not allowed" } */
}

void
tranfunction ()
{
  __transaction_atomic
    {
      inline_death ();
    }
}
